@@ -3,6 +3,10 @@
 # $Header: /var/cvsroot/gentoo-x86/dev-java/cryptix/ChangeLog,v 1.3 2005/05/01 16:07:32 luckyduck Exp $
 
   02 Feb 2007; Alistair Bush <alistair.bush@gmail.com>
+  cryptix-3.2.0-r1.ebuild:
+  Clean up of cryptix thanks to Betelgeuse and fordfrog.
+
+  02 Feb 2007; Alistair Bush <alistair.bush@gmail.com>
   +cryptix-3.2.0-r1.ebuild, +files/build.xml, +metadata.xml:
   Migrated cryptix to generation 2.
 
